Fixed inconsitant conn/Switched to HttpClient